Create calculator foundations
Create and design simple calculator UI. Create and test math functions
in JS. Make notes on how to proceed in calculator.js.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="stylesheet" href="src/style.css">
+    <script src="src/calculator.js" defer></script>
 </head>
 <body>
     <div>Calculator</div>
 </body>
+    <div class="calculator-container">
+        <div class="evaluation-field">
+            Evaluation Field
+        </div>
+        <div class="options-container">
+            <div class="digits-container">
+                <div class="digits-row">
+                    <button class="calculator-option digit">1</button>
+                    <button class="calculator-option digit">2</button>
+                    <button class="calculator-option digit">3</button>
+                </div>
+                <div class="digits-row">
+                    <button class="calculator-option digit">4</button>
+                    <button class="calculator-option digit">5</button>
+                    <button class="calculator-option digit">6</button>
+                </div>
+                <div class="digits-row">
+                    <button class="calculator-option digit">7</button>
+                    <button class="calculator-option digit">8</button>
+                    <button class="calculator-option digit">9</button>
+                </div>
+                <div class="digits-row">
+                    <button class="calculator-option digit">0</button>
+                </div>
+            </div>
+            <div class="operators-container">
+                <button class="calculator-option operator">+</button>
+                <button class="calculator-option operator">-</button>
+                <button class="calculator-option operator">&#x00D7;</button>
+                <button class="calculator-option operator">&#x00F7;</button>
+                <button class="calculator-option operator">=</button>
+            </div>
+        </div>
+    </div>
 </html>
