Piece the UI and JS together
It's not so great at the moment, so this is just a partial save

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </body>
     <div class="calculator-container">
         <div class="evaluation-field">
-            Evaluation Field
+            0
         </div>
         <div class="options-container">
             <div class="digits-container">
                 <div class="digits-row">
-                    <button class="calculator-option digit">1</button>
-                    <button class="calculator-option digit">2</button>
-                    <button class="calculator-option digit">3</button>
+                    <button class="calculator-option digit">7</button>
+                    <button class="calculator-option digit">8</button>
+                    <button class="calculator-option digit">9</button>
                 </div>
                 <div class="digits-row">
                     <button class="calculator-option digit">4</button>
@@ -27,20 +27,21 @@
                     <button class="calculator-option digit">6</button>
                 </div>
                 <div class="digits-row">
-                    <button class="calculator-option digit">7</button>
-                    <button class="calculator-option digit">8</button>
-                    <button class="calculator-option digit">9</button>
+                    <button class="calculator-option digit">1</button>
+                    <button class="calculator-option digit">2</button>
+                    <button class="calculator-option digit">3</button>
                 </div>
                 <div class="digits-row">
                     <button class="calculator-option digit">0</button>
                 </div>
             </div>
             <div class="operators-container">
-                <button class="calculator-option operator">+</button>
-                <button class="calculator-option operator">-</button>
-                <button class="calculator-option operator">&#x00D7;</button>
-                <button class="calculator-option operator">&#x00F7;</button>
-                <button class="calculator-option operator">=</button>
+                <button class="calculator-option operator" id="operator" name="divide">&#x00F7;</button>
+                <button class="calculator-option operator" id="operator" name="multiply">&#x00D7;</button>
+                <button class="calculator-option operator" id="operator" name="subtract">-</button>
+                <button class="calculator-option operator" id="operator" name="add">+</button>
+                <button class="calculator-option operator" id="equals">=</button>
+                <button class="calculator-option operator" id="clear">AC</button>
             </div>
         </div>
     </div>
