Complete basic calculator functionality.
Touch up UI to make it more calculator-like. Amend how the digit/
operator/equals selections lead to over-arching computation (to make
the calculator successful). In essence - overhaul the enterDigit,
enterOperator, and enterEquals functions to work properly. Updated
README to reflect current status.

--- a/index.html
+++ b/index.html
@@ -14,35 +14,32 @@
         <div class="evaluation-field">
             0
         </div>
-        <div class="options-container">
-            <div class="digits-container">
-                <div class="digits-row">
-                    <button class="calculator-option digit">7</button>
-                    <button class="calculator-option digit">8</button>
-                    <button class="calculator-option digit">9</button>
-                </div>
-                <div class="digits-row">
-                    <button class="calculator-option digit">4</button>
-                    <button class="calculator-option digit">5</button>
-                    <button class="calculator-option digit">6</button>
-                </div>
-                <div class="digits-row">
-                    <button class="calculator-option digit">1</button>
-                    <button class="calculator-option digit">2</button>
-                    <button class="calculator-option digit">3</button>
-                </div>
-                <div class="digits-row">
-                    <button class="calculator-option digit">0</button>
-                </div>
-            </div>
-            <div class="operators-container">
-                <button class="calculator-option operator" id="operator" name="divide">&#x00F7;</button>
-                <button class="calculator-option operator" id="operator" name="multiply">&#x00D7;</button>
-                <button class="calculator-option operator" id="operator" name="subtract">-</button>
-                <button class="calculator-option operator" id="operator" name="add">+</button>
-                <button class="calculator-option operator" id="equals">=</button>
-                <button class="calculator-option operator" id="clear">AC</button>
-            </div>
+        <div class="options-container">    
+            <button class="calculator-option digit">7</button>
+            <button class="calculator-option digit">8</button>
+            <button class="calculator-option digit">9</button>
+            <button class="calculator-option operator" id="operator" name="divide">&#x00F7;</button>
+
+            <button class="calculator-option digit">4</button>
+            <button class="calculator-option digit">5</button>
+            <button class="calculator-option digit">6</button>
+            <button class="calculator-option operator" id="operator" name="multiply">&#x00D7;</button>
+
+            <button class="calculator-option digit">1</button>
+            <button class="calculator-option digit">2</button>
+            <button class="calculator-option digit">3</button>
+            <button class="calculator-option operator" id="operator" name="subtract">-</button>
+
+            <button class="calculator-option operator" id="clear">AC</button>
+            <button class="calculator-option digit">0</button>
+            <button class="calculator-option operator" id="equals">=</button>
+            <button class="calculator-option operator" id="operator" name="add">+</button>
+        </div>
+        <div class="witty-remark-container"></div>
+    </div>
+    <div class="footer-container">
+        <div class="top-credit">
+            The Odin Project 2023 - Tyler Prehl
         </div>
     </div>
 </html>
