--- a/index.html
+++ b/index.html
@@ -14,26 +14,35 @@
         <div class="evaluation-field">
             0
         </div>
-        <div class="options-container">    
-            <button class="calculator-option digit">7</button>
-            <button class="calculator-option digit">8</button>
-            <button class="calculator-option digit">9</button>
-            <button class="calculator-option operator" id="operator" name="divide">&#x00F7;</button>
-
-            <button class="calculator-option digit">4</button>
-            <button class="calculator-option digit">5</button>
-            <button class="calculator-option digit">6</button>
-            <button class="calculator-option operator" id="operator" name="multiply">&#x00D7;</button>
-
-            <button class="calculator-option digit">1</button>
-            <button class="calculator-option digit">2</button>
-            <button class="calculator-option digit">3</button>
-            <button class="calculator-option operator" id="operator" name="subtract">-</button>
-
-            <button class="calculator-option operator" id="clear">AC</button>
-            <button class="calculator-option digit">0</button>
-            <button class="calculator-option operator" id="equals">=</button>
-            <button class="calculator-option operator" id="operator" name="add">+</button>
+        <div class="options-container">
+            <div class="options-row">
+                <button class="calculator-option utility grow" id="clear">AC</button>
+                <button class="calculator-option utility" id="negative">&#xB1;</button>
+                <button class="calculator-option operator" id="operator" name="divide">&#x00F7;</button>
+            </div>
+            <div class="options-row">
+                <button class="calculator-option digit digit-color" id="7">7</button>
+                <button class="calculator-option digit digit-color" id="8">8</button>
+                <button class="calculator-option digit digit-color" id="9">9</button>
+                <button class="calculator-option operator" id="operator" name="multiply">&#x00D7;</button>
+            </div>
+            <div class="options-row">
+                <button class="calculator-option digit digit-color" id="4">4</button>
+                <button class="calculator-option digit digit-color" id="5">5</button>
+                <button class="calculator-option digit digit-color" id="6">6</button>
+                <button class="calculator-option operator" id="operator" name="subtract">-</button>
+            </div>
+            <div class="options-row">
+                <button class="calculator-option digit digit-color" id="1">1</button>
+                <button class="calculator-option digit digit-color" id="2">2</button>
+                <button class="calculator-option digit digit-color" id="3">3</button>
+                <button class="calculator-option operator" id="operator" name="add">+</button>
+            </div>
+            <div class="options-row">
+                <button class="calculator-option digit digit-color grow" id="0">0</button>
+                <button class="calculator-option digit-color" id="decimal">.</button>
+                <button class="calculator-option operator" id="equals">=</button>
+            </div>
         </div>
         <div class="witty-remark-container"></div>
     </div>
